Update uml conf

--- a/Devel/Config/4.16/src/uml/config
+++ b/Devel/Config/4.16/src/uml/config
@@ -213,14 +213,13 @@ CONFIG_SLAB=y
 # CONFIG_SLUB is not set
 CONFIG_SLAB_MERGE_DEFAULT=y
 # CONFIG_SLAB_FREELIST_RANDOM is not set
-CONFIG_SYSTEM_DATA_VERIFICATION=y
+# CONFIG_SYSTEM_DATA_VERIFICATION is not set
 # CONFIG_PROFILING is not set
 CONFIG_HAVE_64BIT_ALIGNED_ACCESS=y
 CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
 CONFIG_SECCOMP_FILTER=y
 CONFIG_HAVE_GCC_PLUGINS=y
 # CONFIG_GCC_PLUGINS is not set
-# CONFIG_CC_STACKPROTECTOR is not set
 CONFIG_THIN_ARCHIVES=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_MODULES_USE_ELF_RELA=y
@@ -321,7 +320,6 @@ CONFIG_DEVTMPFS_MOUNT=y
 CONFIG_STANDALONE=y
 CONFIG_PREVENT_FIRMWARE_BUILD=y
 CONFIG_FW_LOADER=y
-CONFIG_FIRMWARE_IN_KERNEL=y
 CONFIG_EXTRA_FIRMWARE=""
 # CONFIG_FW_LOADER_USER_HELPER_FALLBACK is not set
 CONFIG_ALLOW_DEV_COREDUMP=y
@@ -362,6 +360,7 @@ CONFIG_BLK_DEV_NBD=m
 #
 # CONFIG_DUMMY_IRQ is not set
 # CONFIG_ENCLOSURE_SERVICES is not set
+# CONFIG_MISC_RTSX is not set
 # CONFIG_C2PORT is not set
 
 #
@@ -416,6 +415,7 @@ CONFIG_BLK_DEV_NBD=m
 # CONFIG_CXL_BASE is not set
 # CONFIG_CXL_AFU_DRIVER_OPS is not set
 # CONFIG_CXL_LIB is not set
+# CONFIG_OCXL_BASE is not set
 
 #
 # SCSI device support
@@ -456,6 +456,7 @@ CONFIG_NET_VENDOR_AMAZON=y
 CONFIG_NET_VENDOR_AQUANTIA=y
 CONFIG_NET_VENDOR_ARC=y
 # CONFIG_NET_VENDOR_AURORA is not set
+CONFIG_NET_VENDOR_CORTINA=y
 CONFIG_NET_VENDOR_EZCHIP=y
 CONFIG_NET_VENDOR_HUAWEI=y
 CONFIG_NET_VENDOR_INTEL=y
@@ -470,6 +471,7 @@ CONFIG_NET_VENDOR_RENESAS=y
 CONFIG_NET_VENDOR_ROCKER=y
 CONFIG_NET_VENDOR_SAMSUNG=y
 CONFIG_NET_VENDOR_SOLARFLARE=y
+CONFIG_NET_VENDOR_SOCIONEXT=y
 CONFIG_NET_VENDOR_VIA=y
 CONFIG_NET_VENDOR_SYNOPSYS=y
 # CONFIG_MDIO_DEVICE is not set
@@ -573,10 +575,7 @@ CONFIG_USB_OHCI_LITTLE_ENDIAN=y
 # CONFIG_AUXDISPLAY is not set
 # CONFIG_UIO is not set
 # CONFIG_VIRT_DRIVERS is not set
-
-#
-# Virtio drivers
-#
+CONFIG_VIRTIO_MENU=y
 
 #
 # Microsoft Hyper-V guest support
@@ -603,6 +602,7 @@ CONFIG_IOMMU_SUPPORT=y
 #
 # Rpmsg drivers
 #
+# CONFIG_SOUNDWIRE is not set
 
 #
 # SOC (System On Chip) specific Drivers
@@ -625,6 +625,10 @@ CONFIG_IOMMU_SUPPORT=y
 #
 # CONFIG_SUNXI_SRAM is not set
 # CONFIG_SOC_TI is not set
+
+#
+# Xilinx SoC drivers
+#
 # CONFIG_PM_DEVFREQ is not set
 # CONFIG_EXTCON is not set
 # CONFIG_MEMORY is not set
@@ -654,11 +658,9 @@ CONFIG_ARM_GIC_MAX_NR=1
 # CONFIG_NVMEM is not set
 # CONFIG_STM is not set
 # CONFIG_FPGA is not set
-
-#
-# FSI support
-#
 # CONFIG_FSI is not set
+# CONFIG_SIOX is not set
+# CONFIG_SLIMBUS is not set
 CONFIG_NET=y
 
 #
@@ -720,7 +722,6 @@ CONFIG_HAVE_NET_DSA=y
 # CONFIG_VLAN_8021Q is not set
 # CONFIG_DECNET is not set
 # CONFIG_LLC2 is not set
-# CONFIG_IPX is not set
 # CONFIG_ATALK is not set
 # CONFIG_X25 is not set
 # CONFIG_LAPB is not set
@@ -756,8 +757,6 @@ CONFIG_BQL=y
 # CONFIG_STREAM_PARSER is not set
 CONFIG_WIRELESS=y
 # CONFIG_CFG80211 is not set
-CONFIG_CFG80211_REQUIRE_SIGNED_REGDB=y
-CONFIG_CFG80211_USE_KERNEL_REGDB_KEYS=y
 # CONFIG_LIB80211 is not set
 
 #
@@ -900,7 +899,6 @@ CONFIG_NETWORK_FILESYSTEMS=y
 # CONFIG_NFSD is not set
 # CONFIG_CEPH_FS is not set
 # CONFIG_CIFS is not set
-# CONFIG_NCP_FS is not set
 # CONFIG_CODA_FS is not set
 # CONFIG_AFS_FS is not set
 CONFIG_NLS=y
@@ -1111,8 +1109,6 @@ CONFIG_ASYMMETRIC_KEY_TYPE=y
 CONFIG_ASYMMETRIC_PUBLIC_KEY_SUBTYPE=y
 CONFIG_X509_CERTIFICATE_PARSER=y
 CONFIG_PKCS7_MESSAGE_PARSER=y
-# CONFIG_PKCS7_TEST_KEY is not set
-# CONFIG_SIGNED_PE_FILE_VERIFICATION is not set
 
 #
 # Certificates for signature checking
@@ -1150,6 +1146,7 @@ CONFIG_CRC32_SLICEBY8=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
 CONFIG_ASSOCIATIVE_ARRAY=y
+CONFIG_SGL_ALLOC=y
 CONFIG_DQL=y
 CONFIG_NLATTR=y
 CONFIG_CLZ_TAB=y
@@ -1282,10 +1279,7 @@ CONFIG_BRANCH_PROFILE_NONE=y
 # CONFIG_BLK_DEV_IO_TRACE is not set
 # CONFIG_PROBE_EVENTS is not set
 # CONFIG_TRACEPOINT_BENCHMARK is not set
-
-#
-# Runtime Testing
-#
+CONFIG_RUNTIME_TESTING_MENU=y
 # CONFIG_TEST_LIST_SORT is not set
 # CONFIG_TEST_SORT is not set
 # CONFIG_BACKTRACE_SELF_TEST is not set
@@ -1304,7 +1298,7 @@ CONFIG_BRANCH_PROFILE_NONE=y
 # CONFIG_TEST_LKM is not set
 # CONFIG_TEST_USER_COPY is not set
 # CONFIG_TEST_BPF is not set
-# CONFIG_TEST_FIND_BIT is not set
+# CONFIG_FIND_BIT_BENCHMARK is not set
 # CONFIG_TEST_FIRMWARE is not set
 # CONFIG_TEST_SYSCTL is not set
 # CONFIG_TEST_UDELAY is not set
