--- a/Devel/Config/4.15/src/uksm/config
+++ b/Devel/Config/4.15/src/uksm/config
@@ -503,7 +503,7 @@ CONFIG_NO_BOOTMEM=y
 # CONFIG_MEXCAVATOR is not set
 # CONFIG_MZEN is not set
 # CONFIG_MPSC is not set
-# CONFIG_MATOM is not set
+# CONFIG_MATOM is not setla
 # CONFIG_MCORE2 is not set
 # CONFIG_MNEHALEM is not set
 # CONFIG_MWESTMERE is not set
@@ -513,6 +513,7 @@ CONFIG_NO_BOOTMEM=y
 # CONFIG_MHASWELL is not set
 # CONFIG_MBROADWELL is not set
 # CONFIG_MSKYLAKE is not set
+# CONFIG_MSKYLAKEX is not set
 CONFIG_GENERIC_CPU=y
 # CONFIG_MNATIVE is not set
 CONFIG_X86_INTERNODE_CACHE_SHIFT=6
