--- a/Devel/Config/4.15/src/uksm/config
+++ b/Devel/Config/4.15/src/uksm/config
@@ -503,7 +503,7 @@ CONFIG_NO_BOOTMEM=y
 # CONFIG_MEXCAVATOR is not set
 # CONFIG_MZEN is not set
 # CONFIG_MPSC is not set
-# CONFIG_MATOM is not setla
+# CONFIG_MATOM is not set
 # CONFIG_MCORE2 is not set
 # CONFIG_MNEHALEM is not set
 # CONFIG_MWESTMERE is not set
