--- a/lucjan-kernels/trunk/linux-bfq-sq-mq-haswell/PKGBUILD
+++ b/lucjan-kernels/trunk/linux-bfq-sq-mq-haswell/PKGBUILD
@@ -76,14 +76,14 @@ _srcname=linux-4.16
 pkgver=4.16.1
 #_pkgver=4.16.1
 __pkgver=4.16.1-rc1
-pkgrel=0
+pkgrel=0.1
 arch=('x86_64')
 url="https://github.com/Algodev-github/bfq-mq/"
 license=('GPL2')
 options=('!strip')
 makedepends=('kmod' 'inetutils' 'bc' 'libelf')
 _bfq_sq_mq_ver='20180404'
-_bfq_sq_mq_patch="4.16-bfq-sq-mq-git-${_bfq_sq_mq_ver}.patch"
+_bfq_sq_mq_patch="4.16-bfq-sq-mq-git-lucjan-${_bfq_sq_mq_ver}.patch"
 #_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/4.16"
 _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/4.16"
 _gcc_name="kernel_gcc_patch"
@@ -467,7 +467,7 @@ sha512sums=('ab47849314b177d0eec9dbf261f33972b0d89fb92fb0650130ffa7abc2f36c0fab2
             'SKIP'
             '61e5b2739ae029549f8c06c708d87fa6224b3fffbba74434a046eb0892098980ad59320f5ccd7d04681e441f6bd2500918633baa0973063b3ba9f75629ee6004'
             'SKIP'
-            '46e316f67165d8df1779a6d7d105c249d0ff768fbbdd59baa9f475bd4007c6851a64b41e0a3319186848670b41bd55c845583c9307b5f02df14e73aed1db3f5d'
+            '6eb2cb13fcfa482e904328e1e2a2156c2f0fd016308e8e7fa0273466a2392226815266511a57c316952f4d3e0214e6713c3540a4125b9b4e26e467881ddc6472'
             '0f96fa9ad784709973b32eea82075ceb3e9dc2482df6441a4607612806f069254e63508b1b562279622394e4a1fbebef1b87af8401c0b1210d5d0de9954245c8'
             '23cde8ab10fef1552f12869b6bbe11e3c072ea49155746804ccf1c3d550e5d2721cd142559bc2845f11c598435531788f1b876bfa8989bc749e6513bdd95331c'
             '079e34ec7bf3ef36438c648116e24c51e00ea8608a1d8b5776164478522d6a96dcab5fe0431e8e9a6282c11a1edd177e1b68fc971a81717b297e199efc101963'
