--- a/psi-plus-plugins-git/PKGBUILD
+++ b/psi-plus-plugins-git/PKGBUILD
@@ -34,6 +34,7 @@ package_psi-plus-plugins-git() {
   cd psi-plus-snapshots
 
   make DESTDIR="$pkgdir" install
+  # split plugins
   rm "${pkgdir}"/usr/lib/psi-plus/plugins/libbattleshipgameplugin.so
   rm "${pkgdir}"/usr/lib/psi-plus/plugins/libomemoplugin.so
   rm "${pkgdir}"/usr/lib/psi-plus/plugins/libripperccplugin.so
@@ -43,6 +44,7 @@ package_psi-plus-plugins-dev-git() {
   cd psi-plus-snapshots
 
   make DESTDIR="$pkgdir" install
+  # split dev plugins
   rm "${pkgdir}"/usr/lib/psi-plus/plugins/libattentionplugin.so
   rm "${pkgdir}"/usr/lib/psi-plus/plugins/libautoreplyplugin.so
   rm "${pkgdir}"/usr/lib/psi-plus/plugins/libbirthdayreminderplugin.so
