--- a/linux-usermode-rc/PKGBUILD
+++ b/linux-usermode-rc/PKGBUILD
@@ -8,7 +8,7 @@ _srcname=linux-4.16
 pkgver=4.16.1
 #_pkgver=4.16.1
 __pkgver=4.16.1-rc1
-pkgrel=1
+pkgrel=2
 pkgdesc="User mode Linux kernel and modules"
 arch=('x86_64')
 license=('GPL2')
@@ -30,7 +30,7 @@ sha256sums=('63f6dc8e3c9f3a0273d5d6f4dca38a2413ca3a5f689329d05b750e4c87bb21b9'
             'SKIP'
             'd11e904a3674d934a4c367db3500503ec9018c8e83e25c7cb247505f28136866'
             'SKIP'
-            '3b0e4c43a728cf1d62dffc08702f4462f5e2aba1415bf932e8cc3f79c76d5c6e'
+            '7a0a2c3f46da6f864cf1b1b5f074fe08ead8bb6bb7e0a5615269c3b9e0c2f552'
             '452b8d4d71e1565ca91b1bebb280693549222ef51c47ba8964e411b2d461699c'
             '9a7e0a9a2c3d4252cee29b4f5f61da00e98bd247cb5ceb22e31a7f782a45bddf')
 
@@ -86,13 +86,15 @@ _package-modules() {
   conflicts=('linux-usermode-modules')
   
   cd "${srcdir}/${_srcname}"
+  # get kernel version
+  _kernver="$(make ARCH=um kernelrelease)"
   #  make ARCH=um INSTALL_MOD_PATH="${pkgdir}/usr" modules_install
   make ARCH=um INSTALL_MOD_PATH="${pkgdir}/usr" _modinst_
-  rm -f $pkgdir/usr/lib/modules/${pkgver}-${pkgrel}${_kernelname}/{source,build}
+  rm -f $pkgdir/usr/lib/modules/${_kernver}/{source,build}
   # sed expression for following substitutions
   local _subst="
         s|%PKGBASE%|${pkgbase}|g
-        s|%KERNVER%|${pkgver}-${pkgrel}${_kernelname}|g
+        s|%KERNVER%|${_kernver}|g
   "
   # install pacman hook
   sed "${_subst}" ../70-uml.hook |
