--- a/linux-lqx/PKGBUILD
+++ b/linux-lqx/PKGBUILD
@@ -30,12 +30,12 @@ _use_KSM="no"		# "yes":	Enable Kernel SamePage Merging (KSM).
 
 pkgdesc='A desktop oriented kernel and modules with Liquorix patches'
 __basekernel=4.15
-pkgver=4.15.15.1
+pkgver=4.15.16.1
 pkgrel=1
-pkgbase=linux-lqx-test
-# pkgname=('linux-lqx-test' 'linux-lqx-test-headers' 'linux-lqx-test-docs')
+pkgbase=linux-lqx
+# pkgname=('linux-lqx' 'linux-lqx-headers' 'linux-lqx-docs')
 _lqxpatchname=liquorix-package
-_lqxpatchrel=9
+_lqxpatchrel=10
 _lqxpatchver=${_lqxpatchname}-${__basekernel}-${_lqxpatchrel}
 arch=('x86_64')
 license=('GPL2')
@@ -63,7 +63,7 @@ source=("https://www.kernel.org/pub/linux/kernel/v4.x/linux-${__basekernel}.tar.
 
 sha512sums=('c00d92659df815a53dcac7dde145b742b1f20867d380c07cb09ddb3295d6ff10f8931b21ef0b09d7156923a3957b39d74d87c883300173b2e20690d2b4ec35ea'
             'SKIP'
-            'be8f7f9a084781263df9a6d384667126423e1e2d24cce8ae8ad849cfe2fd1737660e5f055336f8ab9275d00cb4cf06b28c946ec9d03080d6176b1bf2969ede4e'
+            'd147d1fd3d6af55ee7bb0ffa3038cd9e206778eb4cc8dc05b2d91c4262172128d20045fd3ecfcc6b5042173321bb889a9c6019f0343b8ca62ae5e67d3d7cbe5b'
             '7ad5be75ee422dda3b80edd2eb614d8a9181e2c8228cd68b3881e2fb95953bf2dea6cbe7900ce1013c9de89b2802574b7b24869fc5d7a95d3cc3112c4d27063a'
             '4a8b324aee4cccf3a512ad04ce1a272d14e5b05c8de90feb82075f55ea3845948d817e1b0c6f298f5816834ddd3e5ce0a0e2619866289f3c1ab8fd2f35f04f44'
             '6346b66f54652256571ef65da8e46db49a95ac5978ecd57a507c6b2a28aee70bb3ff87045ac493f54257c9965da1046a28b72cb5abb0087204d257f14b91fd74'
@@ -240,7 +240,7 @@ cd "${srcdir}/linux-${__basekernel}"
 
 _package-headers() {
 pkgdesc="Header files and scripts to build modules for linux-lqx."
-depends=('linux-lqx-test')
+depends=('linux-lqx')
 
 cd "${srcdir}/linux-${__basekernel}"
 
@@ -313,7 +313,7 @@ local _builddir="${pkgdir}/usr/lib/modules/${_kernver}/build"
 
 _package-docs() {
 pkgdesc="Kernel hackers manual - HTML documentation that comes with the linux-lqx kernel"
-depends=('linux-lqx-test' )
+depends=('linux-lqx' )
 
  cd "${srcdir}/linux-${__basekernel}"
 
