--- a/lucjan-kernels/trunk/linux-bfq-sq-mq-haswell-git/PKGBUILD
+++ b/lucjan-kernels/trunk/linux-bfq-sq-mq-haswell-git/PKGBUILD
@@ -73,8 +73,8 @@ _mq_enable=y
 pkgbase=linux-bfq-sq-mq-haswell-git
 # pkgname=('linux-bfq-sq-mq-haswell-git-kernel' 'linux-bfq-sq-mq-haswell-git-headers' 'linux-bfq-sq-mq-haswell-git-docs')
 _srcname=linux-stable-rc
-pkgver=4.16.32.g30380aa57922
-pkgrel=0.1
+pkgver=4.16.1.0.g11454943b264
+pkgrel=2
 arch=('x86_64')
 url="https://github.com/Algodev-github/bfq-mq/"
 license=('GPL2')
