--- a/kernels-uksm/stable-rc/linux-uksm/PKGBUILD
+++ b/kernels-uksm/stable-rc/linux-uksm/PKGBUILD
@@ -48,10 +48,10 @@ _use_current=
 pkgbase=linux-uksm
 # pkgname=('linux-uksm' 'linux-uksm-headers' 'linux-uksm-docs')
 _srcname=linux-4.16
-pkgver=4.16.1
-#_pkgver=4.16.1
-__pkgver=4.16.1-rc1
-pkgrel=0.1
+pkgver=4.16.2
+_pkgver=4.16.1
+__pkgver=4.16.2-rc1
+pkgrel=0
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
 license=('GPL2')
@@ -66,8 +66,8 @@ _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v4.9+_kernel_v4.13+.patc
 
 source=("https://www.kernel.org/pub/linux/kernel/v4.x/${_srcname}.tar.xz"
         "https://www.kernel.org/pub/linux/kernel/v4.x/${_srcname}.tar.sign"
-        #"https://www.kernel.org/pub/linux/kernel/v4.x/patch-${_pkgver}.xz"
-        #"https://www.kernel.org/pub/linux/kernel/v4.x/patch-${_pkgver}.sign"
+        "https://www.kernel.org/pub/linux/kernel/v4.x/patch-${_pkgver}.xz"
+        "https://www.kernel.org/pub/linux/kernel/v4.x/patch-${_pkgver}.sign"
         "https://www.kernel.org/pub/linux/kernel/v4.x/stable-review/patch-${__pkgver}.xz"
         "https://www.kernel.org/pub/linux/kernel/v4.x/stable-review/patch-${__pkgver}.sign"
         "${_gcc_name}-${_gcc_rel}.tar.gz::${_gcc_path}/${_gcc_rel}.tar.gz"
@@ -93,8 +93,8 @@ prepare() {
     cd ${_srcname}
 
     ### Add upstream patch
-        #msg "Add upstream patch"
-        #patch -p1 -i ../patch-${_pkgver}
+        msg "Add upstream patch"
+        patch -p1 -i ../patch-${_pkgver}
     
     ### Add patch from stable-review
         msg "Add patch from stable-review"  
@@ -366,7 +366,9 @@ done
 
 sha512sums=('ab47849314b177d0eec9dbf261f33972b0d89fb92fb0650130ffa7abc2f36c0fab2d06317dc1683c51a472a9a631573a9b1e7258d6281a2ee189897827f14662'
             'SKIP'
-            '61e5b2739ae029549f8c06c708d87fa6224b3fffbba74434a046eb0892098980ad59320f5ccd7d04681e441f6bd2500918633baa0973063b3ba9f75629ee6004'
+            'd82a74b191b39a8608294d96d4aa29725cb6688e9dc60b0282cdd91be0eca2322738f338e9896850b888a6a16e12c55168d391cd2f0308b44cc5ef3e31bb09a1'
+            'SKIP'
+            '89309b05cd363cf4ea1d703742f6add29faa53b88785181fb67fd427fc34292e6be17aaaa6984e23fb7219b520a9b01a449f515dd1979971c36c6fe3f7e29473'
             'SKIP'
             '079e34ec7bf3ef36438c648116e24c51e00ea8608a1d8b5776164478522d6a96dcab5fe0431e8e9a6282c11a1edd177e1b68fc971a81717b297e199efc101963'
             '337b220e5c5f240bf195fcf174974c03b127598723fc4ea5813e5c32154048ac4193737418b21e720e9034ad53589b59b898d0e648925db7e2db2ad57acd7fe7'
