--- a/lucjan-kernels/trunk/linux-bfq-sq-mq-haswell/PKGBUILD
+++ b/lucjan-kernels/trunk/linux-bfq-sq-mq-haswell/PKGBUILD
@@ -73,10 +73,10 @@ _mq_enable=y
 pkgbase=linux-bfq-sq-mq-haswell
 # pkgname=('linux-bfq-sq-mq-haswell-kernel' 'linux-bfq-sq-mq-haswell-headers' 'linux-bfq-sq-mq-haswell-docs')
 _srcname=linux-4.16
-pkgver=4.16.1
-#_pkgver=4.16.1
-__pkgver=4.16.1-rc1
-pkgrel=0.1
+pkgver=4.16.2
+_pkgver=4.16.1
+__pkgver=4.16.2-rc1
+pkgrel=0
 arch=('x86_64')
 url="https://github.com/Algodev-github/bfq-mq/"
 license=('GPL2')
@@ -93,8 +93,8 @@ _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v4.9+_kernel_v4.13+.patc
 
 source=("https://www.kernel.org/pub/linux/kernel/v4.x/${_srcname}.tar.xz"
         "https://www.kernel.org/pub/linux/kernel/v4.x/${_srcname}.tar.sign"
-        #"https://www.kernel.org/pub/linux/kernel/v4.x/patch-${_pkgver}.xz"
-        #"https://www.kernel.org/pub/linux/kernel/v4.x/patch-${_pkgver}.sign"
+        "https://www.kernel.org/pub/linux/kernel/v4.x/patch-${_pkgver}.xz"
+        "https://www.kernel.org/pub/linux/kernel/v4.x/patch-${_pkgver}.sign"
         "https://www.kernel.org/pub/linux/kernel/v4.x/stable-review/patch-${__pkgver}.xz"
         "https://www.kernel.org/pub/linux/kernel/v4.x/stable-review/patch-${__pkgver}.sign"
         "${_lucjanpath}/${_bfq_sq_mq_patch}"
@@ -121,8 +121,8 @@ prepare() {
     cd ${_srcname}
 
     ### Add upstream patch
-        #msg "Add upstream patch"
-        #patch -p1 -i ../patch-${_pkgver}
+        msg "Add upstream patch"
+        patch -p1 -i ../patch-${_pkgver}
         
     ### Add patch from stable-review
         msg "Fix naming schema in EXTRAVERSION"
@@ -145,7 +145,7 @@ prepare() {
     ### Patch source with BFQ-SQ-MQ
         msg "Fix naming schema in BFQ-SQ-MQ patch"
         sed -i -e "s|PATCHLEVEL = 15|PATCHLEVEL = 16|g" \
-            -i -e "s|SUBLEVEL = 0|SUBLEVEL = 1|g" \
+            -i -e "s|SUBLEVEL = 0|SUBLEVEL = 2|g" \
             -i -e "s|EXTRAVERSION = -bfq|EXTRAVERSION =|g" \
             -i -e "s|EXTRAVERSION =-mq|EXTRAVERSION =|g" ../${_bfq_sq_mq_patch}
         msg "Patching source with BFQ-SQ-MQ patches"
@@ -465,7 +465,9 @@ done
 
 sha512sums=('ab47849314b177d0eec9dbf261f33972b0d89fb92fb0650130ffa7abc2f36c0fab2d06317dc1683c51a472a9a631573a9b1e7258d6281a2ee189897827f14662'
             'SKIP'
-            '61e5b2739ae029549f8c06c708d87fa6224b3fffbba74434a046eb0892098980ad59320f5ccd7d04681e441f6bd2500918633baa0973063b3ba9f75629ee6004'
+            'd82a74b191b39a8608294d96d4aa29725cb6688e9dc60b0282cdd91be0eca2322738f338e9896850b888a6a16e12c55168d391cd2f0308b44cc5ef3e31bb09a1'
+            'SKIP'
+            '89309b05cd363cf4ea1d703742f6add29faa53b88785181fb67fd427fc34292e6be17aaaa6984e23fb7219b520a9b01a449f515dd1979971c36c6fe3f7e29473'
             'SKIP'
             '6eb2cb13fcfa482e904328e1e2a2156c2f0fd016308e8e7fa0273466a2392226815266511a57c316952f4d3e0214e6713c3540a4125b9b4e26e467881ddc6472'
             '0f96fa9ad784709973b32eea82075ceb3e9dc2482df6441a4607612806f069254e63508b1b562279622394e4a1fbebef1b87af8401c0b1210d5d0de9954245c8'
