--- a/kernels-uksm/stable/linux-uksm-git/PKGBUILD
+++ b/kernels-uksm/stable/linux-uksm-git/PKGBUILD
@@ -48,7 +48,7 @@ _use_current=
 pkgbase=linux-uksm-git
 # pkgname=('linux-uksm-git' 'linux-uksm-git-headers' 'linux-uksm-git-docs')
 _srcname=linux-stable
-pkgver=4.16.1.0.g11454943b264
+pkgver=4.16.2.0.g216f33936eaa
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
