--- a/linux-bfq-sq-mq-haswell-v4.17/linux-bfq-sq-mq-haswell-git/PKGBUILD
+++ b/linux-bfq-sq-mq-haswell-v4.17/linux-bfq-sq-mq-haswell-git/PKGBUILD
@@ -68,6 +68,9 @@ _kyber_disable=y
 ### Enable MQ scheduling 
 _mq_enable=y
 
+### Running with a 1000 HZ tick rate 
+_1k_HZ_ticks=y
+
 ### Do not edit below this line unless you know what you're doing
 
 pkgbase=linux-bfq-sq-mq-haswell-git
@@ -226,6 +229,14 @@ END
 		sed -i -e s'/^# CONFIG_SCSI_MQ_DEFAULT is not set/CONFIG_SCSI_MQ_DEFAULT=y/' \
 		    -i -e s'/^# CONFIG_DM_MQ_DEFAULT is not set/CONFIG_DM_MQ_DEFAULT=y/' ./.config
         fi
+        
+    ### Optionally set tickrate to 1000 
+	if [ -n "$_1k_HZ_ticks" ]; then
+		msg "Setting tick rate to 1k..."
+		sed -i -e 's/^CONFIG_HZ_300=y/# CONFIG_HZ_300 is not set/' \
+                    -i -e 's/^# CONFIG_HZ_1000 is not set/CONFIG_HZ_1000=y/' \
+                    -i -e 's/^CONFIG_HZ=300/CONFIG_HZ=1000/' ./.config
+	fi   
 
 	### Optionally disable NUMA for 64-bit kernels only
         # (x86 kernels do not support NUMA)
@@ -454,7 +465,7 @@ sha512sums=('SKIP'
             '5b860dd67312af2327b9c6abc62d08e285cb81b5e64207f879178dac673cfe67249321ab9bf61e07e6fb855b0d7388061e8bbd4cead0e078886b91beb38599c9'
             '0f96fa9ad784709973b32eea82075ceb3e9dc2482df6441a4607612806f069254e63508b1b562279622394e4a1fbebef1b87af8401c0b1210d5d0de9954245c8'
             '079e34ec7bf3ef36438c648116e24c51e00ea8608a1d8b5776164478522d6a96dcab5fe0431e8e9a6282c11a1edd177e1b68fc971a81717b297e199efc101963'
-            '03a1f3021be9205447433e9662b0278b39e056735e88969ab282258b1f2c96470be347693195d631c375fcc0aeec7ff32e9f0d58bdb6338b96b4f4cfb9388b6f'
+            '6aa64d7f63c74effb86f0e5d434cf914df18d7ac6abeced07403e8852c8c8b981d5f741ecec522a49e12740d0a3b042861291e91beb11064430a5f6dbc1b40e0'
             '7ad5be75ee422dda3b80edd2eb614d8a9181e2c8228cd68b3881e2fb95953bf2dea6cbe7900ce1013c9de89b2802574b7b24869fc5d7a95d3cc3112c4d27063a'
             '4a8b324aee4cccf3a512ad04ce1a272d14e5b05c8de90feb82075f55ea3845948d817e1b0c6f298f5816834ddd3e5ce0a0e2619866289f3c1ab8fd2f35f04f44'
             '6346b66f54652256571ef65da8e46db49a95ac5978ecd57a507c6b2a28aee70bb3ff87045ac493f54257c9965da1046a28b72cb5abb0087204d257f14b91fd74'
