--- a/linux-bfq-sq-mq-haswell-v4.17/linux-bfq-sq-mq-haswell-git/PKGBUILD
+++ b/linux-bfq-sq-mq-haswell-v4.17/linux-bfq-sq-mq-haswell-git/PKGBUILD
@@ -75,6 +75,7 @@ _1k_HZ_ticks=y
 
 pkgbase=linux-bfq-sq-mq-haswell-git
 # pkgname=('linux-bfq-sq-mq-haswell-git-kernel' 'linux-bfq-sq-mq-haswell-git-headers' 'linux-bfq-sq-mq-haswell-git-docs')
+_major=4.17
 _srcname=linux
 pkgver=4.17.rc3.0.g6da6c0db5316
 pkgrel=1
@@ -84,9 +85,9 @@ license=('GPL2')
 options=('!strip')
 makedepends=('kmod' 'inetutils' 'bc' 'libelf' 'git')
 _bfq_sq_mq_ver='20180412'
-_bfq_sq_mq_patch="4.17-bfq-sq-mq-git-${_bfq_sq_mq_ver}.patch"
-#_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/4.17"
-_lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/4.17"
+_bfq_sq_mq_patch="${_major}-bfq-sq-mq-git-${_bfq_sq_mq_ver}.patch"
+#_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/${_major}"
+_lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
 _gcc_name="kernel_gcc_patch"
 _gcc_rel='20180310'
 _gcc_path="https://github.com/graysky2/kernel_gcc_patch/archive"
